* 2014-01-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 30435: Don't remove locks upon infostore update events, but on delete events
 
* 2013-12-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 30254: Added column names to SQL statement

* 2013-12-17 - thorben.betten@open-xchange.com

 - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
 - Fix for bug 30357: Remove harmful "<%tag>" tags from HTML content id displayed inline

* 2013-12-17 - tobias.friedrich@open-xchange.com

 - Fix for bug 30359: Configure SAX builder to not resolve external entities

* 2013-12-06 - thorben.betten@open-xchange.com

 - Fix for bug 30191: Explicitly specify number of bytes of 'uid' VARCHAR column considered in index
 - Fix for bug 27640: Properly decode "Subject" header in JSON MIME representation

* 2013-12-02 - thorben.betten@open-xchange.com

 - Fix for bug 30119: Avoid superfluous database updates on JSlob write-back requests
 - Fix for bug 30114: Properly sanitize CSS selectors

* 2013-11-29 - jan.bauerdick@open-xchange.com

 - Fix for bug 29495: Removed port 587 from list of secure smtp ports
 - Fix for bug 30050: Extended logging for folders

* 2013-11-29 - thorben.betten@open-xchange.com

 - Fix for bug 30069: Fixed regex to match a publication URL to support any word character, but not only alphabetic ones

* 2013-11-29 - martin.herfurth@open-xchange.com

 - Fix for bug 29655: Added possibility to change appointments, if external organizer and UID is given (OLOX2 requirement).

* 2013-11-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 30070: Use single operation for moving and renaming folders 

* 2013-11-28 - marcus.klein@open-xchange.com

 - Fix for bug 30063: Do no try to roll back to the save point if MySQL did already a complete transaction rollback.