@@ -1,3 +1,7 @@
+* 2014-01-07 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30439: Try to recover from "NO Unknown namespace" IMAP error on standard folder check
+
 * 2014-01-03 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 30435: Don't remove locks upon infostore update events, but on delete events
